# kbwumin13

./: .gitignore  README.md  data_scanner.py  live_monitor.py  pyproject.toml  valuation_strategy.py  测试测试
configs/: boll_breakout.yaml  dual_thrust.yaml  ma_cross.yaml  turtle.yaml
data/live_watchlist/: watchlist.json
data/raw/daily/: 000001.parquet
data/stock_pool/: hs300_top100.csv  index_pool.csv
data/valuation_daily/: sh_600000.csv  sh_600009.csv  sh_600010.csv  sh_600011.csv  sh_600015.csv  sh_600016.csv  sh_600018.csv  sh_600019.csv  sh_600023.csv  sh_600025.csv  sh_600026.csv  sh_600027.csv  sh_600028.csv  sh_600029.csv  sh_600030.csv  sh_600031.csv  sh_600036.csv  sh_600039.csv  sh_600048.csv  sh_600050.csv  sh_600061.csv  sh_600066.csv  sh_600085.csv  sh_600089.csv  sh_600104.csv  sh_600111.csv  sh_600115.csv  sh_600150.csv  sh_600160.csv  sh_600161.csv  sh_600176.csv  sh_600183.csv  sh_600188.csv  sh_600196.csv  sh_600219.csv  sh_600233.csv  sh_600276.csv  sh_600309.csv  sh_600346.csv  sh_600362.csv  (+61 more)
examples/: run_ma_cross.py
outputs/: 000001_equity.csv  000001_metrics.csv  000001_stats_validation.csv  000001_trades.csv
outputs/valuation_strategy/: trades.csv
src/quant_framework/: __init__.py  config.py
src/quant_framework/analysis/: __init__.py  metrics.py  statistics.py  stats_validator.py
src/quant_framework/backtest/: __init__.py  feeds.py  runner.py
src/quant_framework/cli/: main.py
tests/: test_backtest_runner.py  test_data_store.py  test_metrics.py  test_stats_validator.py  test_strategy_registry.py
(+8 files in other folders)
